fix delete input alignment

--- a/frontend/src/components/Modals/ConfirmationModal.css
+++ b/frontend/src/components/Modals/ConfirmationModal.css
@@ -43,5 +43,6 @@
   padding-top: 22px;
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 22px;
 }
